--- a/MechAffinity/metadata.yaml
+++ b/MechAffinity/metadata.yaml
@@ -1,12 +1,17 @@
+priority: 0
+colorHue: 0.5
 id: MaxWasUnavailable.MechAffinity
 ver: v0.2.0
+url: https://github.com/MaxWasUnavailable/MechAffinity
 includesConfigOverrides: false
 includesConfigEdits: false
+includesConfigTrees: false
 includesLibraries: true
 includesTextures: false
 includesLocalizationEdits: false
 includesLocalizations: false
+includesAssetBundles: false
 gameVersionMin: 1.3
 gameVersionMax: 1.3
 name: Mech Affinity
-desc: Pilots now build affinity towards the mech they control, adding bonuses and incentive to keep pilots matched to specific mechs.
+desc: Pilots now build [b]affinity[/b] towards the mech frame they control, adding bonuses and incentive to keep pilots matched to specific mech frames.
